# fast-qr-py

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
python/fast_qr/: __init__.py  _fast_qr.pyi
src/: lib.rs
tests/: test_fast_qr.py
