[package]
name = "fast-qr-py"
version = "0.1.0"
edition = "2021"

[lib]
name = "fast_qr"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24", features = ["extension-module", "abi3-py313"] }
fast_qr = { version = "0", features = ["svg", "image"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
