[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "fast-qr-py"
version = "0.1.0"
description = "Python bindings for the fast_qr Rust QR code library"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
keywords = ["qr", "qrcode", "fast", "rust"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia :: Graphics",
]

[dependency-groups]
dev = [
    "pytest>=9",
    "ruff>=0",
    "ty>=0",
    "maturin>=1.12",
    "ipython>=9",
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "fast_qr._fast_qr"

[tool.ruff]
target-version = "py313"
line-length = 120
exclude = [".git", "__pycache__", ".mypy_cache", ".pytest_cache", "generated"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TC"]

[tool.ruff.lint.isort]
known-first-party = ["fast_qr"]

[tool.ty.environment]
python-version = "3.13"

[tool.ty.terminal]
output-format = "concise"

[tool.ty.analysis]
respect-type-ignore-comments = false

[tool.uv]
exclude-newer = "2026-03-12T00:00:00Z"
